Add donation management features and enhance donator component

--- a/src/app/pages/donator/donator.component.html
+++ b/src/app/pages/donator/donator.component.html
@@ -30,21 +30,23 @@
                         </thead>
                         <tbody>
                             @for (item of donatorList; track $index) {
-                                <tr>
-                                    <td>{{ $index+1}}</td>
-                                    <td>{{ item.name }}</td>
-                                    <td>{{ item.email }}</td>
-                                    <td>{{ item.birthDate }}</td>
-                                    <!-- <td>{{ item.weight }}</td>
+                            <tr>
+                                <td>{{ $index+1}}</td>
+                                <td>{{ item.name }}</td>
+                                <td>{{ item.email }}</td>
+                                <td>{{ item.birthDate }}</td>
+                                <!-- <td>{{ item.weight }}</td>
                                     <td>{{ item.height }}</td> -->
-                                    <td>{{ item.bloodType }}</td>
-                                    <td>{{ item.genre }}</td>
-                                    <td>{{ item.rhFactor }}</td>
-                                    <td>
-                                        <button class="btn btn-warning"><i class="fa fa-edit"></i></button>
-                                        <button class="btn btn-danger"><i class="fa fa-remove"></i></button>
-                                    </td>
-                                </tr>
+                                <td>{{ item.bloodType }}</td>
+                                <td>{{ item.genre }}</td>
+                                <td>{{ item.rhFactor }}</td>
+                                <td>
+                                    <button type="button" class="btn btn-warning btn-sm" title="Edit"><i
+                                            class="fa fa-edit" (click)="onEdit(item)"></i></button>
+                                    <button type="button" class="btn btn-danger btn-sm" title="Delete"
+                                        (click)="onDelete(item.id)"><i class="fa fa-remove"></i></button>
+                                </td>
+                            </tr>
                             }
                         </tbody>
                     </table>
@@ -68,15 +70,16 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <label for="employeeName" class="form-label">Name</label>
-                                <input name="employeeName" [(ngModel)]="donatorObj.name" class="form-control" id="employeeName"
-                                    placeholder="Enter employee name">
+                                <input name="employeeName" [(ngModel)]="donatorObj.name" class="form-control"
+                                    id="employeeName" placeholder="Enter employee name">
                             </div>
 
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <label for="email" class="form-label">Email</label>
-                                <input type="email" name="email" [(ngModel)]="donatorObj.email" class="form-control" id="email" placeholder="Enter email">
+                                <input type="email" name="email" [(ngModel)]="donatorObj.email" class="form-control"
+                                    id="email" placeholder="Enter email">
                             </div>
 
                         </div>
@@ -91,21 +94,25 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="birthDate" class="form-label">Birth Date</label>
-                                <input type="date" name="birthDate" [(ngModel)]="donatorObj.birthDate" class="form-control" id="birthDate">
+                                <input type="date" name="birthDate" [(ngModel)]="donatorObj.birthDate"
+                                    class="form-control" id="birthDate">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-2">
                                 <label for="weight" class="form-label">Weight</label>
-                                <input type="number" name="weight" [(ngModel)]="donatorObj.weight" class="form-control" id="weight" placeholder="Enter Weight">
+                                <input type="number" name="weight" [(ngModel)]="donatorObj.weight" class="form-control"
+                                    id="weight" placeholder="Enter Weight">
                             </div>
                             <div class="col-md-2">
                                 <label for="height" class="form-label">Height</label>
-                                <input type="number" name="height" [(ngModel)]="donatorObj.height" class="form-control" id="height" placeholder="Enter height">
+                                <input type="number" name="height" [(ngModel)]="donatorObj.height" class="form-control"
+                                    id="height" placeholder="Enter height">
                             </div>
                             <div class="col-md-4">
                                 <label for="bloodType" class="form-label">Type</label>
-                                <select id="bloodType" [(ngModel)]="donatorObj.bloodType" name="bloodType" class="form-select">
+                                <select id="bloodType" [(ngModel)]="donatorObj.bloodType" name="bloodType"
+                                    class="form-select">
                                     <option selected>Select type</option>
                                     <option value="A">A</option>
                                     <option value="B">B</option>
@@ -115,7 +122,8 @@
                             </div>
                             <div class="col-md-4">
                                 <label for="rhFactor" class="form-label">RH</label>
-                                <select id="rhFactor" [(ngModel)]="donatorObj.rhFactor" name="rhFactor" class="form-select">
+                                <select id="rhFactor" [(ngModel)]="donatorObj.rhFactor" name="rhFactor"
+                                    class="form-select">
                                     <option selected>Select RH</option>
                                     <option value="Positive">Positive</option>
                                     <option value="Negative">Negative</option>
@@ -125,26 +133,34 @@
                         </div>
 
                         <div class="row">
-                            
+
                             <div class="col-md-6">
                                 <label for="city" class="form-label">City</label>
-                                <input name="address.city" [(ngModel)]="donatorObj.address.city" class="form-control" id="city">
+                                <input name="address.city" [(ngModel)]="donatorObj.address.city" class="form-control"
+                                    id="city">
                             </div>
                             <div class="col-md-6">
                                 <label for="state" class="form-label">State</label>
-                                <input name="address.state" [(ngModel)]="donatorObj.address.state" class="form-control" id="state">
+                                <input name="address.state" [(ngModel)]="donatorObj.address.state" class="form-control"
+                                    id="state">
                             </div>
                             <div class="col-md-8">
                                 <label for="street" class="form-label">Street</label>
-                                <input name="address.street" [(ngModel)]="donatorObj.address.street" class="form-control" id="street">
+                                <input name="address.street" [(ngModel)]="donatorObj.address.street"
+                                    class="form-control" id="street">
                             </div>
                             <div class="col-md-4">
                                 <label for="postalCode" class="form-label">Postal code</label>
-                                <input name="address.postalCode" [(ngModel)]="donatorObj.address.postalCode" class="form-control" id="postalCode">
+                                <input name="address.postalCode" [(ngModel)]="donatorObj.address.postalCode"
+                                    class="form-control" id="postalCode">
                             </div>
                         </div>
-
-                        <button type="button" (click)="onSaveDonator()" class="btn btn-warning mt-3">Save</button>
+                        @if (donatorObj.id == "") {
+                        <button type="button" (click)="onSaveDonator()" class="btn btn-success mt-3">Save</button>
+                        } 
+                        @else {
+                        <button type="button" (click)="onUpdateDonator()" class="btn btn-success mt-3">Update</button>
+                        }
                     </form>
                 </div>
             </div>
