--- a/src/app/pages/donation/donation.component.html
+++ b/src/app/pages/donation/donation.component.html
@@ -1,1 +1,99 @@
-<p>donation works!</p>
+<div class="container-fluid my-4">
+    <div class="row">
+        <div class="col-7">
+            <div class="card">
+                <div class="card-header bg-secondary">
+                    <div class="row">
+                        <div class="col-6 text-white">
+                            <strong>Donation portal</strong>
+                        </div>
+                        <div class="col-6 text-end">
+                            <button class="btn btn-warning">Add New</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        @for (item of donationsList; track $index) {
+                        <div class="col-md-4">
+                            <div class="card mb-4">
+                                <!-- Card Header with Essential Information -->
+                                <div class="card-header d-flex justify-content-between align-items-center">
+                                    <span><strong>{{item.donatorName}}</strong> </span>
+                                </div>
+
+                                <!-- Card Body with Minimal Info and Toggle for More Details -->
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <strong>Date:</strong> {{item.date}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <strong>Quantity:</strong> {{item.quantity}}
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Card Footer with Action Buttons -->
+                                <div class="card-footer text-end">
+                                    <button class="btn btn-primary btn-sm me-2">Edit</button>
+                                    <button class="btn btn-danger btn-sm">Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-5">
+            <div class="card">
+                <div class="card-header bg-secondary">
+                    <div class="row">
+                        <div class="col-6 text-white">
+                            <strong>New donation</strong>
+                        </div>
+                        <div class="col-6 text-end">
+                            <button class="btn btn-primary">Close</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form id="donationForm" [formGroup]="donationForm">
+                        <div class="row">
+                            <div class="col-md-10">
+                                <div class="form-group">
+                                    <label for="employeeId">Donator</label>
+                                    <select class="form-select" formControlName="donatorId" name="" id="">
+                                        <option value="">Select donator</option>
+                                        @for (item of donatorList(); track $index) {
+                                        <option value="{{item.id}}">{{item.name}}</option>
+                                        }
+                                    </select>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="date">Date</label>
+                                    <input type="date" formControlName="date" class="form-control" id="date">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="quantity">Quantity</label>
+                                    <input type="number" formControlName="quantity" class="form-control" id="quantity">
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-success mt-2" (click)="onSave()">Save</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
