--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,62 @@
-<h1>Home Works</h1>
+
+<div class="container my-4">
+    <h3>Dashboard</h3>
+    <div class="row">
+        <!-- Total donators Widget -->
+        <div class="col-md-4">
+            <div class="card text-white bg-primary mb-3">
+                <div class="card-header">Total donators</div>
+                <div class="card-body">
+                    <p class="card-text" id="totalDonators">{{dashboardList.totalDonators}}</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Total Donations -->
+        <div class="col-md-4">
+            <div class="card text-white bg-success mb-3">
+                <div class="card-header">Total Donations</div>
+                <div class="card-body">
+                    <p class="card-text" id="totalDonations">{{dashboardList.totalDonations}}</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Active Employees in Projects -->
+        <div class="col-md-4">
+            <div class="card text-white bg-warning mb-3">
+                <div class="card-header">Donations this month</div>
+                <div class="card-body">
+                    <p class="card-text" id="donationsThisWeek">{{dashboardList.donationsThisMonht}}</p>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="row">
+        <!-- Latest Projects -->
+        <div class="col-md-6">
+            <div class="card mb-3">
+                <div class="card-header">Top 5 donators</div>
+                <div class="card-body">
+                    <ul id="latestProjects" class="list-group">
+                        <!-- List of latest projects will be dynamically inserted here -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recently Hired Employees -->
+        <div class="col-md-6">
+            <div class="card mb-3">
+                <div class="card-header">Last 5 donators</div>
+                <div class="card-body">
+                    <ul id="recentEmployees" class="list-group">
+                        <!-- List of recent employees will be dynamically inserted here -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
