Refactor UI components to enhance visual consistency and improve user experience

--- a/src/app/pages/donation/donation.component.html
+++ b/src/app/pages/donation/donation.component.html
@@ -2,13 +2,13 @@
     <div class="row">
         <div class="col-7">
             <div class="card">
-                <div class="card-header bg-secondary">
+                <div class="card-header bg-danger">
                     <div class="row">
                         <div class="col-6 text-white">
                             <strong>Donation portal</strong>
                         </div>
                         <div class="col-6 text-end">
-                            <button class="btn btn-warning">Add New</button>
+                            <button class="btn btn-light">Add New</button>
                         </div>
                     </div>
                 </div>
@@ -43,20 +43,21 @@
                                 </div>
                             </div>
                         </div>
-                    }
+                        }
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-5">
             <div class="card">
-                <div class="card-header bg-secondary">
+                <div class="card-header bg-danger">
                     <div class="row">
                         <div class="col-6 text-white">
                             <strong>New donation</strong>
                         </div>
                         <div class="col-6 text-end">
-                            <button class="btn btn-primary">Close</button>
+                            <button class="btn btn-warnin6bv  
+                            ">Close</button>
                         </div>
                     </div>
                 </div>
