--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
 
 <div class="container my-4">
-    <h3>Dashboard</h3>
+    <h3>Actual status</h3>
     <div class="row">
         <!-- Total donators Widget -->
         <div class="col-md-4">
-            <div class="card text-white bg-primary mb-3">
+            <div class="card text-white bg-danger mb-3">
                 <div class="card-header">Total donators</div>
-                <div class="card-body">
-                    <p class="card-text" id="totalDonators">{{dashboardList.totalDonators}}</p>
+                <div class="card-body bg-light text-dark">
+                    <p class="card-text " id="totalDonators">{{dashboardList.totalDonators}}</p>
                 </div>
             </div>
         </div>
@@ -16,7 +16,7 @@
         <div class="col-md-4">
             <div class="card text-white bg-success mb-3">
                 <div class="card-header">Total Donations</div>
-                <div class="card-body">
+                <div class="card-body bg-light text-dark">
                     <p class="card-text" id="totalDonations">{{dashboardList.totalDonations}}</p>
                 </div>
             </div>
@@ -26,7 +26,7 @@
         <div class="col-md-4">
             <div class="card text-white bg-warning mb-3">
                 <div class="card-header">Donations this month</div>
-                <div class="card-body">
+                <div class="card-body bg-light text-dark">
                     <p class="card-text" id="donationsThisWeek">{{dashboardList.donationsThisMonht}}</p>
                 </div>
             </div>
