--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
         <!-- Submit button -->
         <div class="d-grid gap-2">
-          <button type="button" (click)="onLogin()" class="btn btn-primary">Login</button>
+          <button type="button" (click)="onLogin()" class="btn btn-danger">Login</button>
         </div>
       </form>
       <!-- Forgot password link -->
